# ProjetComplet

./: CMakeLists.txt  Doxyfile.in  README.md  main.cpp
inc/: add.h  div.h  mul.h  myclass.h  sub.h
src/: add.cpp  div.cpp  mul.cpp  myclass.cpp  sub.cpp
tests/: CMakeLists.txt  test_add.cpp  test_div.cpp  test_mul.cpp  test_sub.cpp
